--- a/index.html
+++ b/index.html
@@ -1,46 +1,163 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!doctype html>
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento</title>
-    <link rel="stylesheet" href="estilo.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Ticia Ávila artes — Catálogo de Crochê</title>
+  <meta name="description" content="Catálogo de crochê artesanal por Ticia Ávila. Tapetes, bolsas, amigurumis, jogos/kits e pronta entrega. Fale pelo WhatsApp." />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="slider">
 
-        <div class="sliders">
+  <!-- Header / Navigation (sticky) -->
+  <header class="site-header" id="top">
+    <div class="container header-inner">
+      <div class="brand">
+        <a href="#top" class="logo">Ticia Ávila<span class="logo-sub"> artes</span></a>
+      </div>
 
-            <input type="radio" name="radio-btn" id="radio1">
-            <input type="radio" name="radio-btn" id="radio2">
-            <input type="radio" name="radio-btn" id="radio3">
-            <input type="radio" name="radio-btn" id="radio4">
+      <nav class="main-nav" id="main-nav" aria-label="Navegação principal">
+        <ul class="nav-links">
+          <li><a href="#top">Home</a></li>
+          <li><a href="#catalogo">Catálogo</a></li>
+          <li><a href="#sobre">Sobre Nós</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
 
-            <div class="slid first">
-                <img src="imagem/Tapete  (3).jpg" alt="imagem01">
-            </div>
-            <div class="slid">
-                <img src="imagem/Tapete  (5).jpg" alt="imagem02">
-            </div>
-            <div class="slid">
-                <img src="imagem/Tapete  (6).jpg" alt="imagem03">
-            </div>
+      <button id="btn-hamburger" class="hamburger" aria-label="Abrir menu" aria-expanded="false">
+        <span></span><span></span><span></span>
+      </button>
+    </div>
+  </header>
 
-            <div class="navegacao">
-                <div class="auto-01"></div>
-                <div class="auto-02"></div>
-                <div class="auto-03"></div>
-                <div class="auto-04"></div>
-            </div>
+  <main>
+
+    <!-- Hero -->
+    <section class="hero" aria-label="Apresentação">
+      <div class="hero-overlay"></div>
+      <div class="container hero-inner">
+        <div class="hero-text">
+          <h1 class="hero-title">Ticia Ávila — Crochê artesanal</h1>
+          <p class="hero-sub">Peças únicas feitas à mão com carinho. Explore nosso catálogo.</p>
+          <a class="cta-primary" href="#catalogo">Ver Catálogo</a>
         </div>
-            <div class="navegacaomanual">
-                <label for="radio1" class="radio-btn"></label>
-                <label for="radio2" class="radio-btn"></label>
-                <label for="radio3" class="radio-btn"></label>
-                <label for="radio4" class="radio-btn"></label>
-            </div>
+      </div>
 
+      <!-- Filters -->
+      <div class="container">
+        <div class="filters" role="tablist" aria-label="Filtrar produtos">
+          <button class="filter-btn active" data-filter="all">Todos</button>
+          <button class="filter-btn" data-filter="tapetes">Tapetes</button>
+          <button class="filter-btn" data-filter="bolsas">Bolsas</button>
+          <button class="filter-btn" data-filter="amigurumis">Amigurumis</button>
+          <button class="filter-btn" data-filter="kits">Jogos / Kits</button>
+          <button class="filter-btn" data-filter="pronta">Pronta Entrega</button>
         </div>
-    <script src="script.js"></script>
+      </div>
+    </section>
+
+    <!-- Sobre -->
+    <section id="sobre" class="sobre container">
+      <h2>Sobre Nós</h2>
+      <p>
+        Aqui na <strong>Ticia Ávila artes</strong> cada peça é pensada e confeccionada manualmente.
+        Usamos materiais de qualidade e um processo artesanal que valoriza tempo e carinho em cada ponto.
+      </p>
+    </section>
+
+    <!-- Catálogo -->
+    <section id="catalogo" class="catalogo container" tabindex="-1" aria-label="Catálogo de produtos">
+      <h2>Catálogo</h2>
+
+      <div class="grid-products" id="grid-products">
+        <!-- Exemplo de cards -->
+        <article class="product-card" data-category="tapetes" data-name="Tapete Boho" aria-label="Tapete Boho" tabindex="0">
+          <img src="produto-1.jpg" alt="Tapete Boho" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Tapete Boho</h3>
+            <p class="product-price">R$ 220,00</p>
+          </div>
+        </article>
+
+        <article class="product-card" data-category="bolsas" data-name="Bolsa Rústica" aria-label="Bolsa Rústica" tabindex="0">
+          <img src="produto-2.jpg" alt="Bolsa Rústica" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Bolsa Rústica</h3>
+            <p class="product-price">R$ 150,00</p>
+          </div>
+        </article>
+
+        <article class="product-card" data-category="amigurumis" data-name="Amigurumi Urso" aria-label="Amigurumi Urso" tabindex="0">
+          <img src="produto-3.jpg" alt="Amigurumi Urso" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Amigurumi Urso</h3>
+            <p class="product-price">R$ 85,00</p>
+          </div>
+        </article>
+
+        <article class="product-card" data-category="kits" data-name="Jogo de Banho" aria-label="Jogo de Banho" tabindex="0">
+          <img src="produto-4.jpg" alt="Jogo de Banho" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Jogo de Banho</h3>
+            <p class="product-price">R$ 270,00</p>
+          </div>
+        </article>
+
+        <article class="product-card" data-category="pronta" data-name="Bolsa Pronta Entrega - Verde" aria-label="Bolsa Pronta Entrega - Verde" tabindex="0">
+          <img src="produto-5.jpg" alt="Bolsa Pronta Entrega - Verde" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Bolsa Pronta Entrega - Verde</h3>
+            <p class="product-price">R$ 165,00</p>
+          </div>
+        </article>
+
+        <article class="product-card" data-category="tapetes" data-name="Tapete Redondo" aria-label="Tapete Redondo" tabindex="0">
+          <img src="produto-6.jpg" alt="Tapete Redondo" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Tapete Redondo</h3>
+            <p class="product-price">R$ 240,00</p>
+          </div>
+        </article>
+
+      </div>
+    </section>
+
+    <!-- Contato / Footer -->
+    <section id="contato" class="contato container">
+      <h2>Contato</h2>
+      <p>Fale conosco via WhatsApp ou siga-nos no Instagram.</p>
+      <ul class="contact-list">
+        <li>WhatsApp: <a href="https://wa.me/SEUNUMERO" target="_blank" rel="noopener" id="whatsapp-link">Clique para conversar</a></li>
+        <li>Instagram: <a href="https://instagram.com/SEU_PERFIL" target="_blank" rel="noopener">@seu_perfil</a></li>
+      </ul>
+    </section>
+
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>© <span id="year"></span> Ticia Ávila artes. Todos os direitos reservados.</p>
+      <nav aria-label="Redes sociais">
+        <a href="https://wa.me/SEUNUMERO" target="_blank" rel="noopener">WhatsApp</a>
+        <a href="https://instagram.com/SEU_PERFIL" target="_blank" rel="noopener">Instagram</a>
+      </nav>
+    </div>
+  </footer>
+
+  <!-- Floating WhatsApp Button (fixo) -->
+  <!-- Substitua SEUNUMERO pelo número no formato internacional sem '+' nem espaços, ex: 5511999998888 -->
+  <a id="whatsapp-float" class="whatsapp-float" href="https://wa.me/SEUNUMERO?text=Ol%C3%A1%2C%20tenho%20interesse%20nos%20produtos%20de%20croch%C3%AA" target="_blank" rel="noopener" aria-label="Atendimento via whatsapp">
+    <span class="whatsapp-icon" aria-hidden="true">
+      <svg width="25" height="25" viewBox="0 0 24 24"><path fill="currentColor" d="M20.52 3.48A11.862 11.862 0 0012 0C5.373 0 0 5.373 0 12c0 2.116.56 4.082 1.538 5.803L0 24l6.41-1.587A11.92 11.92 0 0012 24c6.627 0 12-5.373 12-12 0-1.968-.48-3.82-1.48-5.52zM12 21.6c-.957 0-1.897-.182-2.774-.54l-.199-.08-3.62.9.935-3.535-.064-.237A8.4 8.4 0 013.6 12c0-4.654 3.746-8.4 8.4-8.4 4.654 0 8.4 3.746 8.4 8.4 0 4.654-3.746 8.4-8.4 8.4zM16.8 14.52c-.28-.14-1.656-.82-1.912-.91-.256-.09-.442-.14-.628.14-.186.28-.72.91-.883 1.096-.162.186-.324.21-.604.07-.28-.14-1.182-.436-2.25-1.39-.833-.74-1.394-1.66-1.556-1.94-.162-.28-.017-.43.124-.57.128-.127.28-.33.42-.496.14-.166.186-.28.28-.466.094-.186.047-.348-.023-.488-.07-.14-.628-1.52-.86-2.08-.226-.54-.457-.466-.628-.476l-.54-.01c-.186 0-.488.07-.744.348-.256.28-.98.96-.98 2.34 0 1.38 1.002 2.72 1.142 2.904.14.186 1.96 3 4.74 4.2 3.048 1.36 3.272 1.04 3.864.98.592-.06 1.92-.78 2.192-1.53.28-.75.28-1.39.196-1.53-.084-.14-.304-.21-.584-.35z"/></svg>
+    </span>
+  </a>
+
+  <script src="script.js"></script>
 </body>
 </html>
