--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Ticia Ávila artes — Catálogo de Crochê</title>
-  <meta name="description" content="Catálogo de crochê artesanal por Ticia Ávila. Tapetes, bolsas, amigurumis, jogos/kits e pronta entrega. Fale pelo WhatsApp." />
+  <meta name="description" content="Catálogo de crochê artesanal por Ticia Ávila. Tapetes, bolsas, amigurumis e jogos/kits. Fale pelo WhatsApp." />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,7 +57,6 @@
           <button class="filter-btn" data-filter="bolsas">Bolsas</button>
           <button class="filter-btn" data-filter="amigurumis">Amigurumis</button>
           <button class="filter-btn" data-filter="kits">Jogos / Kits</button>
-          <button class="filter-btn" data-filter="pronta">Pronta Entrega</button>
         </div>
       </div>
     </section>
@@ -94,9 +93,9 @@
         </article>
 
         <article class="product-card" data-category="amigurumis" data-name="Amigurumi Urso" aria-label="Amigurumi Urso" tabindex="0">
-          <img src="produto-3.jpg" alt="Amigurumi Urso" loading="lazy">
+          <img src="imagem/003_01 COPIA.jpg" alt="Amigurumi Urso" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Amigurumi Urso</h3>
+            <h3 class="product-name">Amigurumi Banguela</h3>
             <p class="product-price">R$ 85,00</p>
           </div>
         </article>
@@ -106,14 +105,6 @@
           <div class="product-body">
             <h3 class="product-name">Jogo de Banho</h3>
             <p class="product-price">R$ 270,00</p>
-          </div>
-        </article>
-
-        <article class="product-card" data-category="pronta" data-name="Bolsa Pronta Entrega - Verde" aria-label="Bolsa Pronta Entrega - Verde" tabindex="0">
-          <img src="produto-5.jpg" alt="Bolsa Pronta Entrega - Verde" loading="lazy">
-          <div class="product-body">
-            <h3 class="product-name">Bolsa Pronta Entrega - Verde</h3>
-            <p class="product-price">R$ 165,00</p>
           </div>
         </article>
 
