--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </article>
 
         <article class="product-card" data-category="kits" data-name="Jogo de Banho" aria-label="Jogo de Banho" tabindex="0">
-          <img src="produto-4.jpg" alt="Jogo de Banho" loading="lazy">
+          <img src="imagem/004_01.jpg" alt="Jogo de Banho" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Jogo de Banho</h3>
             <p class="product-price">R$ 270,00</p>
