--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </article>
 
         <article class="product-card" data-category="tapetes" data-name="Tapete Redondo" aria-label="Tapete Redondo" tabindex="0">
-          <img src="produto-6.jpg" alt="Tapete Redondo" loading="lazy">
+          <img src="imagem/001_01.jpg" alt="Tapete Redondo" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete Redondo</h3>
             <p class="product-price">R$ 240,00</p>
