--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </article>
 
         <article class="product-card" data-category="amigurumis" data-name="Amigurumi Urso" aria-label="Amigurumi Urso" tabindex="0">
-          <img src="imagem/003_01 COPIA.jpg" alt="Amigurumi Urso" loading="lazy">
+          <img src="imagem/" alt="Amigurumi Urso" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Amigurumi Banguela</h3>
             <p class="product-price">R$ 85,00</p>
