--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="grid-products" id="grid-products">
         <!-- Exemplo de cards -->
         <article class="product-card" data-category="tapetes" data-name="Tapete Boho" aria-label="Tapete Boho" tabindex="0">
-          <img src="produto-1.jpg" alt="Tapete Boho" loading="lazy">
+          <img src="imagem/001_02.png" alt="Tapete Boho" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete Boho</h3>
             <p class="product-price">R$ 220,00</p>
@@ -85,7 +85,7 @@
         </article>
 
         <article class="product-card" data-category="bolsas" data-name="Bolsa Rústica" aria-label="Bolsa Rústica" tabindex="0">
-          <img src="produto-2.jpg" alt="Bolsa Rústica" loading="lazy">
+          <img src="imagem/002_01.png" alt="Bolsa Rústica" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Bolsa Rústica</h3>
             <p class="product-price">R$ 150,00</p>
@@ -93,7 +93,7 @@
         </article>
 
         <article class="product-card" data-category="amigurumis" data-name="Amigurumi Urso" aria-label="Amigurumi Urso" tabindex="0">
-          <img src="imagem/" alt="Amigurumi Urso" loading="lazy">
+          <img src="imagem/003_01.png" alt="Amigurumi Urso" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Amigurumi Banguela</h3>
             <p class="product-price">R$ 85,00</p>
@@ -109,7 +109,7 @@
         </article>
 
         <article class="product-card" data-category="tapetes" data-name="Tapete Redondo" aria-label="Tapete Redondo" tabindex="0">
-          <img src="imagem/001_01.jpg" alt="Tapete Redondo" loading="lazy">
+          <img src="imagem/001_01.png" alt="Tapete Redondo" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete Redondo</h3>
             <p class="product-price">R$ 240,00</p>
