--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-convertido-de-png.png">
+  <link rel="icon" type="image/jpg" sizes="32x32" href="favicon/favicon-32x32-convertido-de-png.png">
+  <link rel="icon" type="image/jpg" sizes="16x16" href="favicon/favicon-16x16-convertido-de-png.png">
+
   <title>Ticia Ávila artes — Catálogo de Crochê</title>
   <meta name="description" content="Catálogo de crochê artesanal por Ticia Ávila. Tapetes, bolsas, amigurumis e jogos/kits. Fale pelo WhatsApp." />
 
@@ -15,8 +20,8 @@
   <span class="modal-close">&times;</span>
   <img class="modal-content" id="modal-img">
   </div>
-
   <link rel="stylesheet" href="style.css" />
+
 </head>
 <body>
 
