--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-convertido-de-png.png">
-  <link rel="icon" type="image/jpg" sizes="32x32" href="favicon/favicon-32x32-convertido-de-png.png">
-  <link rel="icon" type="image/jpg" sizes="16x16" href="favicon/favicon-16x16-convertido-de-png.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="imagem/apple-touch-icon-convertido-de-png.png">
+  <link rel="icon" type="image/jpg" sizes="32x32" href="imagem/favicon-32x32-convertido-de-png.png">
+  <link rel="icon" type="image/jpg" sizes="16x16" href="imagem/favicon-16x16-convertido-de-png.png">
 
   <title>Ticia Ávila artes — Catálogo de Crochê</title>
   <meta name="description" content="Catálogo de crochê artesanal por Ticia Ávila. Tapetes, bolsas, amigurumis e jogos/kits. Fale pelo WhatsApp." />
@@ -54,7 +54,7 @@
       <div class="hero-overlay"></div>
       <div class="container hero-inner">
         <div class="hero-text">
-          <h1 class="hero-title">Ticia Ávila — Crochê artesanal</h1>
+          <h1 class="hero-title">Ticia Ávila Crochê artesanal</h1>
           <p class="hero-sub">Peças únicas feitas à mão com carinho. Explore nosso catálogo.</p>
           <a class="cta-primary" href="#catalogo">Ver Catálogo</a>
         </div>
