--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="grid-products" id="grid-products">
         <!-- Exemplo de cards -->
         <article class="product-card" data-category="tapetes" data-name="Tapete Boho" aria-label="Tapete Boho" tabindex="0">
-          <img src="imagem/001_02.png" alt="Tapete Boho" loading="lazy">
+          <img src="Catalogo/00.jpg" alt="Tapete Boho" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete Boho</h3>
             <p class="product-price">R$ 220,00</p>
@@ -120,7 +120,7 @@
         </article>
 
         <article class="product-card" data-category="tapetes" data-name="Tapete Redondo" aria-label="Tapete Redondo" tabindex="0">
-          <img src="imagem/001_01.png" alt="Tapete Redondo" loading="lazy">
+          <img src="Catalogo/001.jpg" alt="Tapete Redondo" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete Redondo</h3>
             <p class="product-price">R$ 240,00</p>
