--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </article>
 
         <article class="product-card" data-category="bolsas" data-name="Bolsa Rústica" aria-label="Bolsa Rústica" tabindex="0">
-          <img src="imagem/002_01.png" alt="Bolsa Rústica" loading="lazy">
+          <img src="Catalogo/002_01.jpg" alt="Bolsa Rústica" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Bolsa Rústica</h3>
             <p class="product-price">R$ 150,00</p>
