--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/jpg" sizes="32x32" href="imagem/favicon-32x32-convertido-de-png.png">
   <link rel="icon" type="image/jpg" sizes="16x16" href="imagem/favicon-16x16-convertido-de-png.png">
 
-  <title>Ticia Ávila artes — Catálogo de Crochê</title>
+  <title>Ávila Catálogo de Crochê</title>
   <meta name="description" content="Catálogo de crochê artesanal por Ticia Ávila. Tapetes, bolsas, amigurumis e jogos/kits. Fale pelo WhatsApp." />
 
   <!-- Fonts -->
@@ -54,7 +54,7 @@
       <div class="hero-overlay"></div>
       <div class="container hero-inner">
         <div class="hero-text">
-          <h1 class="hero-title">Ticia Ávila Crochê artesanal</h1>
+          <h1 class="hero-title">Ticia Ávila Crochê</h1>
           <p class="hero-sub">Peças únicas feitas à mão com carinho. Explore nosso catálogo.</p>
           <a class="cta-primary" href="#catalogo">Ver Catálogo</a>
         </div>
@@ -92,6 +92,7 @@
           <img src="Catalogo/004_01.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -100,14 +101,16 @@
           <img src="Catalogo/001_05.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
 
-          <article class="product-card" data-category="Kits" tabindex="0">
+          <article class="product-card" data-category="kits" tabindex="0">
           <img src="Catalogo/004_04.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -116,6 +119,7 @@
           <img src="Catalogo/003_01.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Santinha</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -124,6 +128,7 @@
           <img src="Catalogo/003_04.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Capivara</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -132,6 +137,7 @@
           <img src="Catalogo/002_01.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Bolsa</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -140,6 +146,7 @@
           <img src="Catalogo/002_02.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Bolsa</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -148,6 +155,7 @@
           <img src="Catalogo/001_01.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -156,6 +164,7 @@
           <img src="Catalogo/001_02.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -164,6 +173,7 @@
           <img src="Catalogo/001_03.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -172,6 +182,7 @@
           <img src="Catalogo/001_04.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -180,6 +191,7 @@
           <img src="Catalogo/001_06.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -188,6 +200,7 @@
           <img src="Catalogo/001_07.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -196,6 +209,7 @@
           <img src="Catalogo/001_08.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -204,6 +218,7 @@
           <img src="Catalogo/001_09.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -212,6 +227,7 @@
           <img src="Catalogo/001_10.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -220,6 +236,7 @@
           <img src="Catalogo/001_11.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -228,6 +245,7 @@
           <img src="Catalogo/001_12.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Tapete</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -236,6 +254,7 @@
           <img src="Catalogo/002_03.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Bolsas</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -244,6 +263,7 @@
           <img src="Catalogo/002_04.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Bolsas</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -252,6 +272,7 @@
           <img src="Catalogo/002_05.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Bolsas</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -260,6 +281,7 @@
           <img src="Catalogo/002_06.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Bolsas</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -268,6 +290,7 @@
           <img src="Catalogo/002_07.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Bolsas</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -276,6 +299,7 @@
           <img src="Catalogo/002_08.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Bolsas</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
@@ -284,17 +308,128 @@
           <img src="Catalogo/002_09.jpg" loading="lazy">
           <div class="product-body">
             <h3 class="product-name">Bolsas</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
 
-          <article class="product-card" data-category="bolsas" tabindex="0">
-          <img src="" loading="lazy">
+          <article class="product-card" data-category="amigurumis" tabindex="0">
+          <img src="Catalogo/003_02.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Bolsas</h3>
+            <h3 class="product-name">Amigurumi</h3>
+            <p class="desc">Informação:</p>
             <p class="product-price">R$ 00,00</p>
           </div>
         </article>
+
+          <article class="product-card" data-category="amigurumis" tabindex="0">
+          <img src="Catalogo/003_03.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Amigurumi</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
+          <article class="product-card" data-category="amigurumis" tabindex="0">
+          <img src="Catalogo/003_05.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Amigurumi</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
+          <article class="product-card" data-category="amigurumis" tabindex="0">
+          <img src="Catalogo/003_06.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Amigurumi</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
+          <article class="product-card" data-category="amigurumis" tabindex="0">
+          <img src="Catalogo/003_07.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Amigurumi</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
+          <article class="product-card" data-category="amigurumis" tabindex="0">
+          <img src="Catalogo/003_08.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Amigurumi</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
+          <article class="product-card" data-category="kits" tabindex="0">
+          <img src="Catalogo/004_02.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Jogo</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
+          <article class="product-card" data-category="kits" tabindex="0">
+          <img src="Catalogo/004_03.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Jogo</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
+          <article class="product-card" data-category="kits" tabindex="0">
+          <img src="Catalogo/004_05.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Jogo</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
+          <article class="product-card" data-category="kits" tabindex="0">
+          <img src="Catalogo/004_06.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Jogo</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
+          <article class="product-card" data-category="kits" tabindex="0">
+          <img src="Catalogo/004_07.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Jogo</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
+          <article class="product-card" data-category="kits" tabindex="0">
+          <img src="Catalogo/004_08.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Jogo</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
+          <article class="product-card" data-category="kits" tabindex="0">
+          <img src="Catalogo/004_09.jpg" loading="lazy">
+          <div class="product-body">
+            <h3 class="product-name">Jogo</h3>
+            <p class="desc">Informação:</p>
+            <p class="product-price">R$ 00,00</p>
+          </div>
+        </article>
+
 
       </div>
     </section>
@@ -302,10 +437,9 @@
     <!-- Contato / Footer -->
     <section id="contato" class="contato container">
       <h2>Contato</h2>
-      <p>Fale conosco via WhatsApp ou siga-nos no Instagram.</p>
+      <p>Entre em contato e siga-nos no Instagram.</p>
       <ul class="contact-list">
-        <li>WhatsApp: <a id="whatsapp-float" href="5542999114157" target="_blank" rel="noopener" id="whatsapp-link">Clique para conversar</a></li>
-        <li>Instagram: <a href="https://www.instagram.com/ticia_avila/" target="_blank" rel="noopener">@seu_perfil</a></li>
+        <li>Instagram: <a href="https://www.instagram.com/ticia_avila/" target="_blank" rel="noopener">@ticia_avila</a></li>
       </ul>
     </section>
 
