--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
+  <!-- Google tag (gtag.js) -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-0HHN16V3R5"></script>
+ <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0HHN16V3R5');
+ </script>
+
   <link rel="apple-touch-icon" sizes="180x180" href="imagem/apple-touch-icon-convertido-de-png.png">
   <link rel="icon" type="image/jpg" sizes="32x32" href="imagem/favicon-32x32-convertido-de-png.png">
   <link rel="icon" type="image/jpg" sizes="16x16" href="imagem/favicon-16x16-convertido-de-png.png">
