--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
           <article class="product-card" data-category="kits"  tabindex="0">
           <img src="Catalogo/004_01.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Jogo Elegância</h3>
+            <p class="desc">Kit com 3 peças de tamanhos variados</p>
+            <p class="product-price">R$ 170,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_05.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Caminho de mesa folha</h3>
+            <p class="desc">Medida: 85 x 45cm</p>
+            <p class="product-price">R$ 65,00</p>
           </div>
         </article>
 
@@ -164,18 +164,18 @@
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_01.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Passadeira Folha</h3>
+            <p class="desc">Medida: 1,40 x 62cm</p>
+            <p class="product-price">R$ 170,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_02.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Tapete Napolitano</h3>
+            <p class="desc">Medida: 70 x 45cm</p>
+            <p class="product-price">R$ 45,00</p>
           </div>
         </article>
         
@@ -191,90 +191,90 @@
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_04.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Tapete Glamour</h3>
+            <p class="desc">Medida: 70 x 48cm</p>
+            <p class="product-price">R$ 45,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_06.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Passadeira Napolitano Mini</h3>
+            <p class="desc">Medida: 90 x 38cm</p>
+            <p class="product-price">R$ 100,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_07.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Passadeira Luciana</h3>
+            <p class="desc">Medida: 1,10 x 42cm</p>
+            <p class="product-price">R$ 120,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_08.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Tapete Napolitano</h3>
+            <p class="desc">Medida: 68 x 45cm</p>
+            <p class="product-price">R$ 45,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_09.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Tapete Redondo</h3>
+            <p class="desc">Medida: 1,20cm</p>
+            <p class="product-price">R$ 200,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_10.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Tapete Aurora</h3>
+            <p class="desc">Medida: 60 x 45cm</p>
+            <p class="product-price">R$ 40,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_11.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Sousplat Tulipa</h3>
+            <p class="desc">Medida: 40cm</p>
+            <p class="product-price">R$ 35,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_12.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Caminho de mesa Mega Rosa</h3>
+            <p class="desc">Medida: 1,20 x 45cm</p>
+            <p class="product-price">R$ 120,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="bolsas" tabindex="0">
           <img src="Catalogo/002_03.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Bolsas</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Bolsa Luxo</h3>
+            <p class="desc">Medida: 20 x 16cm</p>
+            <p class="product-price">R$ 125,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="bolsas" tabindex="0">
           <img src="Catalogo/002_04.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Bolsas</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Bolsa Granada</h3>
+            <p class="desc">Medida: 30 x 25cm</p>
+            <p class="product-price">R$ 170,00</p>
           </div>
         </article>
 
@@ -290,36 +290,36 @@
           <article class="product-card" data-category="bolsas" tabindex="0">
           <img src="Catalogo/002_06.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Bolsas</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Mochila fio de malha</h3>
+            <p class="desc">Medida: 30 x 25cm</p>
+            <p class="product-price">R$ 200,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="bolsas" tabindex="0">
           <img src="Catalogo/002_07.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Bolsas</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Bolsa Rubi</h3>
+            <p class="desc">Medindo: 20 x 16cm</p>
+            <p class="product-price">R$ 100,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="bolsas" tabindex="0">
           <img src="Catalogo/002_08.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Bolsas</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Bolsa Pandora</h3>
+            <p class="desc">Medindo: 28 x 18cm</p>
+            <p class="product-price">R$ 100,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="bolsas" tabindex="0">
           <img src="Catalogo/002_09.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Bolsas</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Bolsa Rubi</h3>
+            <p class="desc">Medindo: 20 x 16cm</p>
+            <p class="product-price">R$ 100,00</p>
           </div>
         </article>
 
@@ -398,27 +398,27 @@
           <article class="product-card" data-category="kits" tabindex="0">
           <img src="Catalogo/004_05.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Jogo</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Jogo de banheiro Aline</h3>
+            <p class="desc">Kit com 3 peças de tamanhos variados</p>
+            <p class="product-price">R$ 120,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="kits" tabindex="0">
           <img src="Catalogo/004_06.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Jogo</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Jogo de banheiro Napolitano</h3>
+            <p class="desc">Kit com 3 peças de tamanhos variados</p>
+            <p class="product-price">R$ 100,00</p>
           </div>
         </article>
 
-          <article class="product-card" data-category="kits" tabindex="0">
+          <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/004_07.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Jogo</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Tapete Aline</h3>
+            <p class="desc">Medida: 60 x 45cm</p>
+            <p class="product-price">R$ 45,00</p>
           </div>
         </article>
 
@@ -434,9 +434,9 @@
           <article class="product-card" data-category="kits" tabindex="0">
           <img src="Catalogo/004_09.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Jogo</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Jogo de banheiro Aurora</h3>
+            <p class="desc">Kit com 3 peças de tamanhos variados</p>
+            <p class="product-price">R$ 120,00</p>
           </div>
         </article>
 
